--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mt-5">Login to BB Database</h1>
+        <h1 class="mt-5">Login to Bharath Database</h1>
+        <h3>POC database</h3>
         <form method="post" action="{{ url_for('login') }}">
             <div class="form-group">
                 <label for="username">Username</label>
