--- a/templates/success.html
+++ b/templates/success.html
@@ -35,7 +35,7 @@
     <div class="container">
         <div class="card">
             <div class="card-body">
-                <h3>Welcome to SQL database-New</h3>
+                <h3>Welcome to SQL database</h3>
                 <h1 class="card-title">Login Successful</h1>
                 <p class="card-text">{{ message }}</p>
                 <a href="{{ url_for('index') }}" class="btn btn-custom mt-3">Back to Home</a>
